--- a/test-spark.ipynb
+++ b/test-spark.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "df = spark.read.format(\"csv\").option(\"header\",\"true\").option(\"InferSchema\",\"True\").load(\"file:///Users/jackshalu/Documents/Spark-The-Definitive-Guide-master/data/retail-data/all/*.csv\")\n",
     "df.printSchema()\n",
-    "df.show()"
+    "df.show(20)"
    ]
   },
   {
