--- a/Spark Chapter 8.ipynb
+++ b/Spark Chapter 8.ipynb
@@ -90,7 +90,7 @@
     "#Shuffle Join - very expensive - need to do intelligent partitioning\n",
     "#Broacast join - no expensive - Big table to small table - broadcast small table to all worker node in order to avoid shuffle\n",
     "\n",
-    "from pyspark.sql.functions import broadcast\n",
+    "from 90 pyspark.sql.functions import broadcast\n",
     "#perform broadcast function use only small dataframe\n",
     "person.join(broadcast(graduateProgram), joinExpr).explain()"
    ]
