--- a/Spark Chapter5.ipynb
+++ b/Spark Chapter5.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import SparkSession sample\n",
     "from pyspark import SparkContext,SparkConf\n",
     "from pyspark.sql import Row\n",
     "if __name__ == \"__main__\":\n",
