--- a/Spark Chapter 8.ipynb
+++ b/Spark Chapter 8.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import SparkSession, functions\n",
     "from pyspark import SparkContext,SparkConf\n",
     "\n",
     "if __name__ == \"__main__\":\n",
